# grift

./: .gitignore  .gitmodules  Committee.md  LICENSE  README.md  Reading.md  TODO.md  cabal.project  grift.cabal  install-softfloat-osx.sh  new-names.txt  priv.org  riscv-tools.cabal  stack.yaml
code/: fib.bytes  fib.c  fib.h  fib.text
docs/: Committee.md  Extend.md  Reading.md
future/: cambridge.org
grift/: README.md  grift.cabal
grift-doc/: COPYING  grift-doc.cabal
grift-doc/src/: GriftDoc.hs  MainDoc.hs
grift-sim/: README.md  grift-sim.cabal
grift-sim/src/: GriftSim.hs  MainSimulator.hs
grift-sim/src/GRIFT/Simulation/: LogMachine.hs
grift-tv/: CHANGELOG.md  grift-tv.cabal
grift-tv/src/: GriftTV.hs
grift/src/: MainCoverageDemo.hs  MainDoc.hs  MainSimulator.hs
grift/src/GRIFT/: Decode.hs  InstructionSet.hs  Latency.hs  Semantics.hs  Simulation.hs  Types.hs
grift/src/GRIFT/BitVector/: BVApp.hs  BVFloatApp.hs  BitLayout.hs
grift/src/GRIFT/InstructionSet/: A.hs  Base.hs  FD.hs  Known.hs  M.hs  Priv.hs  Utils.hs
grift/src/GRIFT/Semantics/: Abbrev.hs  Crucible.hs  Expand.hs  Pretty.hs  Utils.hs
grift/src/GRIFT/Simulation/: LogMachine.hs  OldMachine.hs  Symbolic.hs
ideas/: floatingpoint.txt  priv.org  semantics.txt  spec_questions.txt  step.txt
module_graph/: gengraph.sh  mods.dot
old-src/: STMachine.hs
src/: DemoSimulator.hs  MainAssemble.hs  MainCoverageDemo.hs  MainDisassembler.hs  MainDoc.hs  MainSimulator.hs  MainTestGen.hs  RISCV.hs  Test.hs
src/GRIFT/: Coverage.hs  InstructionSet.hs  Semantics.hs  Simulation.hs  Types.hs
src/GRIFT/InstructionSet/: Base.hs  Known.hs  Priv.hs  Utils.hs
src/GRIFT/Simulation/: LogMachine.hs  LogMachineNew.hs
src/RISCV/: Assemble.hs  BVApp.hs  Base.hs  BitVector.hs  Coverage.hs  Decode.hs  Encode.hs  ExtM.hs  Extensions.hs  Format.hs  Instruction.hs  InstructionSet.hs  Latency.hs  Layouts.hs  Semantics.hs  Simulation.hs  Types.hs  Utils.hs  Verilog.hs
src/RISCV/Extensions/: A.hs  Base.hs  Helpers.hs  M.hs  Priv.hs
src/RISCV/Instruction/: Layouts.hs  Lens.hs
src/RISCV/InstructionSet/: A.hs  Base.hs  FD.hs  Helpers.hs  Known.hs  M.hs  Priv.hs  Utils.hs
src/RISCV/Semantics/: Exceptions.hs  Helpers.hs
src/RISCV/Simulation/: IOMachine.hs  LogMachine.hs  MapMachine.hs  STMachine.hs
test/: Makefile  Test.hs  addi.bytes  addi.info  init.S  mmio.ld  qsort.dis  qsort.riscv  qsort.riscv.dump  run-riscv-tests.sh
test/C_tests_RV64IM/: Makefile
test/C_tests_RV64IM/accel_aes/: Makefile  a.out  a.text
test/C_tests_RV64IM/accel_aes-fixed/: accel_aes.c
test/C_tests_RV64IM/accel_aes_zero/: Makefile  (+4 more)
test/accel_aes/: accel_aes.c
test/add/: add.c
test/aditya/: Makefile  init.S  t1.c
test/aes/: README.md  a  aes.c  aes.h  aes_main.c  random_key.py
test/basic_test/: Makefile  basic_test.s  basic_test64  basic_test64.text  build.sh  start.s
test/extractedAES/: Makefile  aes128BlockDecrypt.c  aes128BlockEncrypt.c  aes128KeySchedule.c  aes128Lib.h  aes128Lib_driver.c
test/fact/: build.sh  fact-spike  fact-spike.text  fact.c  fact32  fact32.s  fact32.text  fact64  fact64.s  fact64.text
test/fib/: build.sh  fib  fib-spike  fib-spike.text  fib.c  fib.dump  fib32  fib32.s  fib32.text  fib64  fib64.s  fib64.text
test/hello/: hello  hello.c  hello.dump  hello.s  init.S
test/isa/: rv32mi-p-breakpoint  rv32mi-p-csr  rv32mi-p-illegal  rv32mi-p-ma_addr  rv32mi-p-ma_fetch  rv32mi-p-mcsr  rv32mi-p-sbreak  rv32mi-p-scall  rv32mi-p-shamt  rv32si-p-csr  rv32si-p-dirty  rv32si-p-ma_fetch  rv32si-p-sbreak  rv32si-p-scall  rv32si-p-wfi  rv32ua-p-amoadd_w  rv32ua-p-amoand_w  rv32ua-p-amomax_w  rv32ua-p-amomaxu_w  rv32ua-p-amomin_w  rv32ua-p-amominu_w  rv32ua-p-amoor_w  rv32ua-p-amoswap_w  rv32ua-p-amoxor_w  rv32ua-p-lrsc  rv32ua-v-amoadd_w  rv32ua-v-amoand_w  rv32ua-v-amomax_w  rv32ua-v-amomaxu_w  rv32ua-v-amomin_w  rv32ua-v-amominu_w  rv32ua-v-amoor_w  rv32ua-v-amoswap_w  rv32ua-v-amoxor_w  rv32ua-v-lrsc  rv32uc-p-rvc  rv32uc-v-rvc  rv32ud-p-fadd  rv32ud-p-fclass  rv32ud-p-fcmp  (+363 more)
test/median/: build.sh  dataset1.h  median-spike  median-spike.text  median32  median32.s  median32.text  median64  median64.s  median64.text  median_main.c  median_main32.s  median_main64.s  start.s
test/multiply/: build.sh  dataset10.h  dataset10000.h  multiply  multiply-spike  multiply-spike.text  multiply.dis  multiply.text  multiply32  multiply32.s  multiply32.text  multiply64  multiply64.s  multiply64.text  multiply_main.c  multiply_main32.s  multiply_main64.s  start.s  util.h
test/qsort/: build.sh  dataset2.h  dataset3.h  qsort-spike  qsort-spike.text  qsort32  qsort32.text  qsort64  qsort64.text  qsort_main.c  qsort_main32.s  qsort_main64.s
test/riscv-compliance/: I-ADD-01.elf  I-ADD-01.elf.objdump  I-ADDI-01.elf  I-ADDI-01.elf.objdump  I-AND-01.elf  I-AND-01.elf.objdump  I-ANDI-01.elf  I-ANDI-01.elf.objdump  I-AUIPC-01.elf  I-AUIPC-01.elf.objdump  I-BEQ-01.elf  I-BEQ-01.elf.objdump  I-BGE-01.elf  I-BGE-01.elf.objdump  I-BGEU-01.elf  I-BGEU-01.elf.objdump  I-BLT-01.elf  I-BLT-01.elf.objdump  I-BLTU-01.elf  I-BLTU-01.elf.objdump  I-BNE-01.elf  I-BNE-01.elf.objdump  I-CSRRC-01.elf  I-CSRRC-01.elf.objdump  I-CSRRCI-01.elf  I-CSRRCI-01.elf.objdump  I-CSRRS-01.elf  I-CSRRS-01.elf.objdump  I-CSRRSI-01.elf  I-CSRRSI-01.elf.objdump  I-CSRRW-01.elf  I-CSRRW-01.elf.objdump  I-CSRRWI-01.elf  I-CSRRWI-01.elf.objdump  I-DELAY_SLOTS-01.elf  I-DELAY_SLOTS-01.elf.objdump  I-EBREAK-01.elf  I-EBREAK-01.elf.objdump  I-ECALL-01.elf  I-ECALL-01.elf.objdump  (+71 more)
test/simple-benchmark/: bench-spike  bench-spike.text  bench.c  bench.c~  bench32  bench32.s  bench32.text  bench64  bench64.s  bench64.text  build.sh  clean.sh  start.s
test/test-just-exit/: build.sh  build.sh~  test-just-exit  test-just-exit.c  test-just-exit.s~  test-just-exit.text  test-just-exit32  test-just-exit32.s  test-just-exit32.s~  test-just-exit32.text  test-just-exit64.s  test-just-exit64.s~  test-just-exit64.text
test/towers/: build.sh  towers-spike  towers-spike.text  towers32  towers32.text  towers64  towers64.text  towers_main.c  towers_main32.s  towers_main64.s
(+475 files in other folders)
