
name:                grift
version:             0.1.0.0
synopsis:
description:
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           March 2018
category:            RISC-V
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     RISCV.Coverage
                     , RISCV.Decode
                     , RISCV.Extensions
                     , RISCV.Extensions.Base
                     , RISCV.Extensions.Helpers
                     , RISCV.Extensions.A
                     , RISCV.Extensions.M
                     , RISCV.Extensions.Priv
                     , RISCV.InstructionSet
                     , RISCV.Latency
                     , RISCV.Semantics
                     , RISCV.Semantics.Exceptions
                     , RISCV.Simulation
                     , RISCV.Simulation.LogMachine
                     , RISCV.Simulation.MapMachine
                     , RISCV.Types
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.4 && < 0.5
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.11 && < 0.5.12
                     , elf-edit
                     , filepath >= 1.4 && < 1.5
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils
                     , prettyclass >= 1.0 && < 1.1
                     , transformers >= 0.5 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable grift
  hs-source-dirs:      src
  main-is:             MainSimulator.hs
  other-modules:       RISCV.Coverage
                     , RISCV.Decode
                     , RISCV.Extensions
                     , RISCV.Extensions.Base
                     , RISCV.Extensions.Helpers
                     , RISCV.Extensions.A
                     , RISCV.Extensions.M
                     , RISCV.Extensions.Priv
                     , RISCV.InstructionSet
                     , RISCV.Latency
                     , RISCV.Semantics
                     , RISCV.Semantics.Exceptions
                     , RISCV.Simulation
                     , RISCV.Simulation.LogMachine
                     , RISCV.Simulation.MapMachine
                     , RISCV.Types
  default-language:    Haskell2010
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.4 && < 0.5
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.11 && < 0.5.12
                     , elf-edit
                     , filepath >= 1.4 && < 1.5
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils
                     , prettyclass >= 1.0 && < 1.1
                     , transformers >= 0.5 && < 0.6
  
