
name:                grift
version:             0.1.0.0
synopsis:
description:
license:             BSD3
license-file:        COPYING
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           March 2018
category:            RISC-V
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     RISCV.Coverage
                     , RISCV.Decode
                     , RISCV.InstructionSet.Known
                     , RISCV.InstructionSet
                     , RISCV.Semantics
                     , RISCV.Simulation
                     , RISCV.Simulation.LogMachine
                     , RISCV.Types
                     , RISCV.InstructionSet.A
                     , RISCV.InstructionSet.Base
                     , RISCV.InstructionSet.FD
                     , RISCV.InstructionSet.M
                     , RISCV.InstructionSet.Priv
                     , RISCV.InstructionSet.Utils
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.5 && < 0.6
                     , bv-sized-float
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.11 && < 0.5.12
                     , elf-edit
                     , filepath >= 1.4 && < 1.5
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils
                     , prettyclass >= 1.0 && < 1.1
                     , softfloat-hs
                     , transformers >= 0.5 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable grift-sim
  ghc-options:         -threaded
  hs-source-dirs:      src
  main-is:             MainSimulator.hs
  other-modules:       RISCV.Coverage
                     , RISCV.Decode
                     , RISCV.InstructionSet.Base
                     , RISCV.InstructionSet.A
                     , RISCV.InstructionSet.FD
                     , RISCV.InstructionSet.Known
                     , RISCV.InstructionSet.M
                     , RISCV.InstructionSet.Priv
                     , RISCV.InstructionSet.Utils
                     , RISCV.InstructionSet
                     , RISCV.Semantics
                     , RISCV.Simulation
                     , RISCV.Simulation.LogMachine
                     , RISCV.Types
  default-language:    Haskell2010
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.5 && < 0.6
                     , bv-sized-float
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.11 && < 0.5.12
                     , elf-edit
                     , filepath >= 1.4 && < 1.5
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils
                     , prettyclass >= 1.0 && < 1.1
                     , softfloat-hs
                     , transformers >= 0.5 && < 0.6

executable grift-cov-demo
  ghc-options:         -threaded
  hs-source-dirs:      src
  main-is:             MainCoverageDemo.hs
  other-modules:       RISCV.Coverage
                     , RISCV.Decode
                     , RISCV.InstructionSet.Base
                     , RISCV.InstructionSet.A
                     , RISCV.InstructionSet.FD
                     , RISCV.InstructionSet.Known
                     , RISCV.InstructionSet.M
                     , RISCV.InstructionSet.Priv
                     , RISCV.InstructionSet.Utils
                     , RISCV.InstructionSet
                     , RISCV.Semantics
                     , RISCV.Simulation
                     , RISCV.Simulation.LogMachine
                     , RISCV.Types
  default-language:    Haskell2010
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.5 && < 0.6
                     , bv-sized-float
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.11 && < 0.5.12
                     , elf-edit
                     , filepath >= 1.4 && < 1.5
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils
                     , prettyclass >= 1.0 && < 1.1
                     , softfloat-hs
                     , transformers >= 0.5 && < 0.6
  

executable grift-doc
  ghc-options:         -threaded
  hs-source-dirs:      src
  main-is:             MainDoc.hs
  other-modules:       RISCV.Coverage
                     , RISCV.Decode
                     , RISCV.InstructionSet.Base
                     , RISCV.InstructionSet.A
                     , RISCV.InstructionSet.FD
                     , RISCV.InstructionSet.Known
                     , RISCV.InstructionSet.M
                     , RISCV.InstructionSet.Priv
                     , RISCV.InstructionSet.Utils
                     , RISCV.InstructionSet
                     , RISCV.Semantics
                     , RISCV.Simulation
                     , RISCV.Simulation.LogMachine
                     , RISCV.Types
  default-language:    Haskell2010
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.5 && < 0.6
                     , bv-sized-float
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.11 && < 0.5.12
                     , elf-edit
                     , filepath >= 1.4 && < 1.5
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils
                     , prettyclass >= 1.0 && < 1.1
                     , softfloat-hs
                     , transformers >= 0.5 && < 0.6


-- executable grift-gen
--   ghc-options:         -threaded
--   hs-source-dirs:      src
--   main-is:             MainTestGen.hs
--   other-modules:       RISCV.Coverage
--                      , RISCV.Decode
--                      , RISCV.InstructionSet.Base
--                      , RISCV.InstructionSet.A
--                      , RISCV.InstructionSet.FD
--                      , RISCV.InstructionSet.Known
--                      , RISCV.InstructionSet.M
--                      , RISCV.InstructionSet.Priv
--                      , RISCV.InstructionSet.Utils
--                      , RISCV.InstructionSet
--                      , RISCV.Semantics
--                      , RISCV.Simulation
--                      , RISCV.Simulation.LogMachine
--                      , RISCV.Types
--   default-language:    Haskell2010
--   build-depends:       array >= 0.5 && < 0.6
--                      , base >= 4.7 && < 5
--                      , bv-sized >= 0.5 && < 0.6
--                      , bv-sized-float
--                      , bytestring >= 0.10.8 && < 0.10.9
--                      , containers >= 0.5.11 && < 0.5.12
--                      , elf-edit
--                      , filepath >= 1.4 && < 1.5
--                      , lens >= 4 && < 5
--                      , mtl >= 2.2 && < 2.3
--                      , parameterized-utils
--                      , prettyclass >= 1.0 && < 1.1
--                      , softfloat-hs
--                      , transformers >= 0.5 && < 0.6
