
name:                riscv-tools
version:             0.1.0.0
synopsis:
description:
homepage:            https://github.com/benjaminselfridge/riscv-tools#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           March 2018
category:            RISC-V
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     RISCV
                     , RISCV.Decode
                     , RISCV.Encode
                     , RISCV.Extensions
                     , RISCV.Extensions.Base
                     , RISCV.Extensions.Helpers
                     , RISCV.Extensions.M
                     , RISCV.Instruction
                     , RISCV.InstructionSet
                     , RISCV.Instruction.Layouts
                     , RISCV.Semantics
                     , RISCV.Simulation
                     , RISCV.Simulation.STMachine
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.2 && < 0.3
                     , containers >= 0.5.11 && < 0.5.12
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils
                     , transformers >= 0.5 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable riscv-sim
  hs-source-dirs:      src
  main-is:             MainSimulator.hs
  other-modules:       RISCV
                     , RISCV.Decode
                     , RISCV.Encode
                     , RISCV.Extensions
                     , RISCV.Extensions.Base
                     , RISCV.Extensions.Helpers
                     , RISCV.Extensions.M
                     , RISCV.Instruction
                     , RISCV.InstructionSet
                     , RISCV.Instruction.Layouts
                     , RISCV.Semantics
                     , RISCV.Simulation
                     , RISCV.Simulation.STMachine
  default-language:    Haskell2010
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.2 && < 0.3
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.11 && < 0.5.12
                     , elf-edit
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils
                     , transformers >= 0.5 && < 0.6
  
-- test-suite riscv-tests
--   type: exitcode-stdio-1.0
--   default-language: Haskell2010
--   ghc-options: -Wall
--   main-is: Test.hs
--   other-modules:       RISCV
--                      , RISCV.Base
--                      , RISCV.Decode
--                      , RISCV.Encode
--                      , RISCV.ExtM
--                      , RISCV.Instruction
--                      , RISCV.InstructionSet
--                      , RISCV.Instruction.Layouts
--   hs-source-dirs: test, src
--   build-depends:       base >= 4.7 && < 5
--                      , bv-sized >= 0.2 && < 0.3
--                      , containers >= 0.5.11 && < 0.5.12
--                      , lens >= 4 && < 5
--                      , mtl >= 2.2 && < 2.3
--                      , parameterized-utils
--                      , QuickCheck >= 2.11 && < 2.12
