
name:                grift-sim
version:             0.1.0.0
synopsis:
description:
license:             BSD3
license-file:        COPYING
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           March 2018
category:            RISC-V
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable grift-sim
  ghc-options:         -threaded
  hs-source-dirs:      src
  main-is:             GriftSim.hs
  other-modules:       GRIFT.Simulation.LogMachine
  default-language:    Haskell2010
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.6 && < 0.7
                     , bv-sized-float
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.11 && < 0.5.12
                     , elf-edit
                     , filepath >= 1.4 && < 1.5
                     , grift
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , optparse-applicative
                     , parameterized-utils
                     , pretty
                     , softfloat-hs
                     , transformers >= 0.5 && < 0.6
                     , vector >= 0.12 && < 0.13
