
name:                grift
version:             0.1.0.0
synopsis:
description:
license:             BSD3
license-file:        COPYING
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           March 2018
category:            RISC-V
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     GRIFT.Decode
                     , GRIFT.InstructionSet.Known
                     , GRIFT.InstructionSet
                     , GRIFT.Semantics
                     , GRIFT.Semantics.Expand
                     , GRIFT.Semantics.Pretty
                     , GRIFT.Semantics.Utils
                     , GRIFT.Simulation
                     , GRIFT.Types
                     , GRIFT.InstructionSet.A
                     , GRIFT.InstructionSet.Base
                     , GRIFT.InstructionSet.FD
                     , GRIFT.InstructionSet.M
                     , GRIFT.InstructionSet.Priv
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 0.6 && < 0.7
                     , bv-sized-float
                     , bytestring >= 0.10.8 && < 0.10.9
                     , containers >= 0.5.11 && < 0.7
                     , elf-edit
                     , filepath >= 1.4 && < 1.5
                     , lens >= 4 && < 5
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils
                     , pretty
                     , softfloat-hs
                     , transformers >= 0.5 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
