
name:                grift
version:             0.2.0.0
synopsis:
description:
license:             BSD3
license-file:        COPYING
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           March 2018
category:            RISC-V
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     GRIFT.BitVector.BitLayout
                     , GRIFT.BitVector.BVApp
                     , GRIFT.BitVector.BVFloatApp
                     , GRIFT.Decode
                     , GRIFT.InstructionSet.Known
                     , GRIFT.InstructionSet
                     , GRIFT.Semantics
                     -- , GRIFT.Semantics.Crucible
                     , GRIFT.Semantics.Expand
                     , GRIFT.Semantics.Pretty
                     , GRIFT.Semantics.Utils
                     , GRIFT.Simulation
                     , GRIFT.Types
                     , GRIFT.InstructionSet.A
                     , GRIFT.InstructionSet.Base
                     , GRIFT.InstructionSet.FD
                     , GRIFT.InstructionSet.M
                     , GRIFT.InstructionSet.Priv
  build-depends:       array >= 0.5 && < 0.6
                     , base >= 4.7 && < 5
                     , bv-sized >= 1.0.2 && < 1.0.5
                     , bv-sized-float >= 0.2 && < 0.3
                     , bytestring >= 0.10.8 && < 0.12
                     , containers >= 0.5.11 && < 0.7
                     -- , crucible
                     -- , crucible-llvm
                     , elf-edit
                     , filepath >= 1.4 && < 1.5
                     , ghc-typelits-natnormalise
                     , lens >= 4 && < 6
                     , mtl >= 2.2 && < 2.3
                     , parameterized-utils >= 2.1.5.0
                     , pretty
                     , softfloat-hs
                     , transformers >= 0.5 && < 0.6
                     -- , what4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
